ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /ajay            # your path name
        pathType: Prefix
        backend:
          service:
            name: my-service   # Your NGINX service name
            port:
              number: 80          # Port defined in your Service
